--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Tasteful Treasure</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
